@@ -61,7 +61,6 @@ function PacketeryCheckoutModulesManager() {
 }
 
 var packeteryModulesManager = new PacketeryCheckoutModulesManager();
-var widgetCarriers;
 
 var packeteryCreateZasBoxes = function($delivery_options, getExtraContentContainer, zpoint_carriers, onSuccess) {
     var deferreds = [];
@@ -143,8 +142,6 @@ window.initializePacketaWidget = function() {
     }
 
     var module = packeteryModulesManager.detectModule();
-    var $widgetParent = packeteryModulesManager.getWidgetParent(module.getSelectedInput());
-    widgetCarriers = $widgetParent.find('#widget_carriers').val();
 
     $('.open-packeta-widget').click(function(e) {
         e.preventDefault();
@@ -154,13 +151,17 @@ window.initializePacketaWidget = function() {
             country: country,
             language: language,
         };
+        var $selectedDeliveryOption = module.getSelectedInput();
+        if ($selectedDeliveryOption.length === 0) {
+            // in supercheckout after switching country and no delivery is selected
+            return;
+        }
+        var $widgetParent = packeteryModulesManager.getWidgetParent($selectedDeliveryOption);
+        var widgetCarriers = $widgetParent.find('#widget_carriers').val();
         if (widgetCarriers !== '') {
             widgetOptions.carriers = widgetCarriers;
         }
         Packeta.Widget.pick(packetaApiKey, function(pickupPoint) {
-            var $selectedDeliveryOption = module.getSelectedInput();
-            $widgetParent = packeteryModulesManager.getWidgetParent($selectedDeliveryOption);
-
             if (pickupPoint != null) {
                 /* Save needed pickup point attributes to inputs */
                 $widgetParent.find('.packeta-branch-id').val(pickupPoint.id);
@@ -198,6 +199,14 @@ window.initializePacketaWidget = function() {
             }
         }, widgetOptions);
     });
+
+    if ($('#widgetAutoOpen').val() === '1') {
+        var openWidget = function () {
+            tools.openSelectedDeliveryWidget(module.getSelectedInput());
+        };
+        module.findDeliveryOptions().on('change', openWidget);
+        openWidget();
+    }
 };
 
 tools = {
@@ -206,7 +215,6 @@ tools = {
     },
     fixextracontent: function() {
         var module = packeteryModulesManager.detectModule();
-
         if (module === null) {
             return;
         }
@@ -283,7 +291,22 @@ tools = {
                 module.disableSubmitButton();
             }
         });
-    }
+    },
+
+    openSelectedDeliveryWidget: function ($selectedDeliveryOption) {
+        if ($selectedDeliveryOption.length !== 1) {
+            return;
+        }
+        var $widgetParent = packeteryModulesManager.getWidgetParent($selectedDeliveryOption);
+        var $widgetButton = $widgetParent.find('.open-packeta-widget');
+        if (
+            $widgetButton.length === 1 &&
+            $widgetParent.find('.packeta-branch-id').val() === '' &&
+            $('iframe #packeta-widget').length === 0
+        ) {
+            $widgetButton.click();
+        }
+    },
 }
 
 packetery = {
